syntax = "proto3";

option go_package = "pb/game";

import "common/tip.proto";
import "common/comp.proto";
import "common/empty.proto";
import "logic/component/skill_comp.proto";
import "logic/component/actor_comp.proto";

option cc_generic_services = true;

// 消息定义，用于同步实体的属性增量数据
message SyncBaseStateAttributeDeltaS2C {
  uint64 entity_id = 1;  // 实体的唯一ID
  Velocity velocity = 2;      // 速度信息
}

// 服务定义，用于处理实体状态的同步
service EntityStateSyncService 
{
  rpc SyncBaseStateAttribute (SyncBaseStateAttributeDeltaS2C) returns (Empty);  // 同步实体的属性状态
}